--- a/index.html
+++ b/index.html
@@ -21,20 +21,13 @@
          <div>
             <button name='creer' id='afficher'>Créer table</button>
         </div>
-        <div>
+        <!-- <div>
             <button name='convertir' id='convertir'>Convertir en JSON</button>
+        </div> -->
+        <div>
+            <button name='convertir2' id='convertir2'>Exporter Nono</button>
         </div>
-    </form>
 
-    <!-- <table>
-        <tbody>
-            <tr><td>a</td><td>a</td><td>a</td><td>a</td><td>a</td><td>a</td></tr>
-            <tr><td>a</td><td>a</td><td>a</td><td>a</td><td>a</td><td>a</td></tr>
-            <tr><td>a</td><td>a</td><td>a</td><td>a</td><td>a</td><td>a</td></tr>
-            <tr><td>a</td><td>a</td><td>a</td><td>a</td><td>a</td><td>a</td></tr>
-            <tr><td>a</td><td>a</td><td>a</td><td>a</td><td>a</td><td>a</td></tr>
-            <tr><td>a</td><td>a</td><td>a</td><td>a</td><td>a</td><td>a</td></tr>
-        </tbody>
-    </table> -->
+    </form>
 </body>
 </html>
